<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical">

    <include layout="@layout/tg_common_view_title_bar" />

    <EditText
        android:id="@+id/tg_common_layout_admin_login_etPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_68"
        android:hint="@string/hint_common_admin_login_pass"
        android:maxLines="1"
        android:singleLine="true" />

    <Button
        android:id="@+id/tg_common_layout_admin_login_btnLogin"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_16"
        android:background="@drawable/tg_common_btn_red_style"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/but_common_confirm_yes"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/sp_18" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/hint_common_admin_login"
        android:textColor="@color/red" />

    <TextView
        android:id="@+id/tg_common_layout_admin_login_tvContactName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:gravity="center_horizontal|bottom"
        android:text="@string/default_common_about_contact_name"
        android:textColor="@color/grey" />
</LinearLayout>