<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical">

    <include layout="@layout/tg_common_view_title_bar" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.scwang.wave.MultiWaveHeader
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:mwhCloseColor="@color/colorAccent"
            app:mwhColorAlpha="0.45"
            app:mwhGradientAngle="45"
            app:mwhIsRunning="true"
            app:mwhProgress="0.4"
            app:mwhStartColor="@color/colorPrimaryDark"
            app:mwhVelocity="1"
            app:mwhWaveHeight="50dp"
            app:mwhWaves="70,25,1.4,1.6,-26
        100,5,1.4,1.2,15
        220,0,1,1,-15" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:gravity="center"
                android:orientation="vertical">

                <com.turingoal.common.android.ui.widget.TgLongClickImageView
                    android:id="@+id/tg_common_layout_login_ivLogo"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_50"
                    android:layout_marginTop="@dimen/dp_12"
                    android:src="@drawable/tg_common_ic_blank" />

                <ImageView
                    android:id="@+id/tg_common_layout_login_ivTitleLogo"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_8"
                    android:src="@drawable/tg_common_ic_blank" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp_16"
                    android:layout_marginStart="@dimen/dp_16">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dp_16"
                        android:orientation="vertical">

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/tg_common_layout_login_tilUsername"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/label_common_login_account"
                            app:counterEnabled="true"
                            app:counterMaxLength="30"
                            app:counterOverflowTextAppearance="@style/count_over_text"
                            app:counterTextAppearance="@style/count_text">

                            <com.turingoal.common.android.ui.widget.TgClearEditText
                                android:id="@+id/tg_common_layout_login_etUsername"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:digits="@string/ruleAZaz09"
                                android:drawableLeft="@drawable/tg_common_ic_user_24dp"
                                android:drawablePadding="@dimen/dp_4"
                                android:importantForAutofill="noExcludeDescendants"
                                android:inputType="textEmailAddress"
                                android:maxLines="1"
                                android:singleLine="true" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/tg_common_layout_login_tilPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/label_common_login_password"
                            app:counterEnabled="true"
                            app:counterMaxLength="30"
                            app:counterOverflowTextAppearance="@style/count_over_text"
                            app:counterTextAppearance="@style/count_text">

                            <EditText
                                android:id="@+id/tg_common_layout_login_etPassword"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/dp_8"
                                android:digits="@string/ruleAZaz09"
                                android:drawablePadding="@dimen/dp_4"
                                android:drawableStart="@drawable/tg_common_ic_lock_24dp"
                                android:importantForAutofill="noExcludeDescendants"
                                android:inputType="textPassword"
                                android:maxLines="1"
                                android:singleLine="true" />
                        </android.support.design.widget.TextInputLayout>

                        <Button
                            android:id="@+id/tg_common_layout_login_btnLogin"
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp_10"
                            android:background="@drawable/tg_common_btn_blue_style"
                            android:clickable="true"
                            android:focusable="true"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:text="@string/but_common_login"
                            android:textColor="#FFFFFF"
                            android:textSize="@dimen/sp_18" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>

            <TextView
                android:id="@+id/tg_common_layout_login_tvContactName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/default_common_about_contact_name"
                android:textColor="@color/grey" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>